--- a/src/about me.html
+++ b/src/about me.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
+    <meta name="description"
+        content="A product designer and a design enthusiast. loves creating seamless user experiences and digital user interfaces.">
+    <meta name="keywords"
+        content="Product, Design, Product Designer, UI, UX, UIUX, UI/UX, Tobi, Oluwatobi, Ozenua, Perfectionist, User, User experience, User interface">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
     <link rel="stylesheet" href="public/styles/style.css" />
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
@@ -97,7 +105,7 @@
 
         <section class="header space-y-7 py-10 lg:py-16 xl:py-10">
             <h1
-                class="header-text text-black dark:text-white inv font-caudex text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-lg5xl 2xl:text-6xl">
+                class="header-text text-black dark:text-white font-caudex text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-lg5xl 2xl:text-6xl">
 
             </h1>
 
@@ -254,7 +262,7 @@
             </p>
 
             <p data-aos="fade-left" data-aos-delay="300"
-                class="highlight-big-text inv font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 md:tracking-tighter dark:text-dark">
+                class="highlight-big-text font-caudex text-light text-lg5xl sm:text-lg7xl md:text-9xl lg:text-11xl xl:text-12xl 2xl:text-13xl sm:-mt-3 md:-mt-5 lg:-mt-7 xl:-mt-10 md:tracking-tighter dark:text-dark">
                 HIGHLIGHT
             </p>
         </section>
@@ -1230,7 +1238,7 @@
     <footer class="bg-black opacity-0 lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24 lg:mt-40" id="footer">
         <div class="container mx-auto px-4 sm:px-8">
             <div
-                class="first-container before:bg-black dark:before:bg-white after:bg-black dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+                class="first-container before:bg-white  after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
