--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ozenua</title>
+  <title>Ozenua Oluwatobi -Product Designer</title>
+  <meta name="description"
+    content="A product designer and a design enthusiast. loves creating seamless user experiences and digital user interfaces.">
+  <meta name="keywords"
+    content="Product, Design, Product Designer, UI, UX, UIUX, UI/UX, Tobi, Oluwatobi, Ozenua, Perfectionist, User, User experience, User interface">
+  <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+  <link rel="manifest" href="../favicon/site.webmanifest">
   <link rel="stylesheet" href="public/styles/style.css" />
   <link rel="stylesheet" href="sass/texts.scss">
   <link rel="stylesheet" href="sass/cursor.scss">
@@ -1158,7 +1166,7 @@
             Learn to create great designs and scale your design career on my channel where I share helpful design tips.
           </p>
 
-          <p class="subscribe text-xs lg:text-sm xl:text-base 2xl:text-lg"><a href="#">Subscribe</a></p>
+          <p class="subscribe text-xs lg:text-sm xl:text-base 2xl:text-lg"><a href="https://www.youtube.com/channel/UCkMQSM_kyqb2IurX31tcUoA">Subscribe</a></p>
         </div>
 
         <!-- Blocks for small screens -->
@@ -1174,10 +1182,10 @@
     </section>
   </div>
 
-  <footer class="bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24" id="footer">
+  <footer class="bg-black inv lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24" id="footer">
     <div class="container mx-auto px-4 sm:px-8">
       <div
-        class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+        class="first-container before:bg-white after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
         <div
           class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
           <h1 class="got-an-idea inv font-caudex text-white text-2xl sm:text-4xl lg:text-5xl xl:text-6xl 2xl:text-7xl">
@@ -1232,7 +1240,7 @@
   </div>
 
   <div id="view-case" ref="view-case" class="view-case invisible lg:visible flex justify-center items-center">
-    <p class="uppercase view-case-text text-xs font-sf text-black dark:text-white z-50">
+    <p class="uppercase view-case-text text-xs font-sf dark:text-white z-50">
       view case
     </p>
   </div>
@@ -1250,7 +1258,7 @@
   <script type="module" src="js/index.js"></script>
   <script type="module" src="js/text.js"></script>
   <script>
-    window.addEventListener("load", init());
+    // window.addEventListener("load", init());
 
     function init() {
       setTimeout(() => {
