--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jumiar</title>
+    <meta name="description"
+        content="A product designer and a design enthusiast. loves creating seamless user experiences and digital user interfaces.">
+    <meta name="keywords"
+        content="Product, Design, Product Designer, UI, UX, UIUX, UI/UX, Tobi, Oluwatobi, Ozenua, Perfectionist, User, User experience, User interface">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
     <link rel="stylesheet" href="public/styles/style.css" />
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
@@ -20,9 +28,11 @@
     </style>
     <script type="module">
         import $ from "jquery";
-        window.addEventListener('load', () => {
+        window.addEventListener('load', scrollToTop());
+
+        function scrollToTop() {
             $('html, body').animate({ scrollTop: 0 }, 'fast')
-        });
+        }
     </script>
 </head>
 
@@ -269,9 +279,7 @@
                 </p>
 
                 <div class="why-jumia-image pt-5 lg:mt-10 lg:mb-32">
-                    <a href="../assets/images/Jumiar Analytics.png">
                         <img src="../assets/images/Jumiar Analytics.png" alt="">
-                    </a>
                 </div>
 
                 <h3
@@ -346,8 +354,8 @@
                 </p>
 
                 <div class="userflow-image w-full lg:mb-32">
-                    <a href="../assets/images/Jumiar Userflow.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Userflow.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Jumiar Userflow.png" alt="">
                 </div>
             </div>
 
@@ -366,8 +374,8 @@
                 </p>
 
                 <div class="wireframes-image w-full lg:mb-32">
-                    <a href="../assets/images/Juimar Wireframes.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Juimar Wireframes.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Juimar Wireframes.png" alt="">
                 </div>
             </div>
 
@@ -384,8 +392,8 @@
                 </p>
 
                 <div class="design-style-guide-image w-full lg:mt-10 lg:mb-32">
-                    <a href="../assets/images/Jumiar Style Guide.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Style Guide.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Jumiar Style Guide.png" alt="">
                 </div>
             </div>
 
@@ -405,15 +413,11 @@
 
                 <div class="visual-design-images w-full space-y-3 lg:space-y-3">
                     <div class="visual-design-image">
-                        <a href="../assets/images/Jumiar Visual Design 1.png">
                             <img src="../assets/images/Jumiar Visual Design 1.png" alt="">
-                        </a>
                     </div>
 
                     <div class="visual-design-image">
-                        <a href="../assets/images/Jumiar Visual Design 2.png">
                             <img src="../assets/images/Jumiar Visual Design 2.png" alt="">
-                        </a>
                     </div>
                 </div>
             </div>
@@ -445,8 +449,8 @@
                 </div>
 
                 <div class="further-visual-design-image">
-                    <a href="../assets/images/Jumiar Visual Design 3.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Jumiar Visual Design 3.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Jumiar Visual Design 3.png" alt="">
                 </div>
             </div>
 
@@ -469,10 +473,10 @@
                 </p>
 
                 <div class="grid grid-cols-2 gap-x-2 md:gap-x-5 lg:gap-x-5 lg:mt-14">
-                    <a href="../assets/images/Jumiar Search 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Search 1.png" alt=""></a>
-                    <a href="../assets/images/Jumiar Search 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Search 2.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Jumiar Search 1.png" alt="">
+                    <img class="rounded-2xl lg:rounded-3xl"
+                            src="../assets/images/Jumiar Search 2.png" alt="">
                 </div>
             </div>
 
@@ -499,9 +503,9 @@
 
                 <div class="space-y-10 md:space-y-0 md:grid grid-cols-2 place-items-start md:gap-x-5 lg:mt-10">
                     <div class="info-1 space-y-5 sm:space-y-6 2xl:space-y-7">
-                        <a href="../assets/images/Jumiar Test AR 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                        <img class="rounded-2xl lg:rounded-3xl w-full"
                                 class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Test AR 1.png"
-                                alt=""></a>
+                                alt="">
 
                         <p
                             class="info-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-8">
@@ -513,9 +517,9 @@
                     </div>
 
                     <div class="info-2 space-y-5 sm:space-y-6 2xl:space-y-7">
-                        <a href="../assets/images/Jumiar Test AR 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
+                        <img class="rounded-2xl lg:rounded-3xl w-full"
                                 class="rounded-2xl lg:rounded-3xl" src="../assets/images/Jumiar Test AR 2.png"
-                                alt=""></a>
+                                alt="">
 
                         <p
                             class="info-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-8">
@@ -592,7 +596,7 @@
     <footer class="bg-black opacity-0 lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
             <div
-                class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+                class="first-container before:bg-white after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
@@ -627,12 +631,12 @@
                 </div>
             </div>
 
-                <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
-                    <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
-                        Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
-                                target="blank">ganiyu idris</a></span>
-                    </p>
-                </div>
+            <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
+                <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
+                    Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
+                            target="blank">ganiyu idris</a></span>
+                </p>
+            </div>
         </div>
     </footer>
 
@@ -646,25 +650,14 @@
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/opacity.js"></script>
     <script type="module" src="js/nav.js"></script>
-    <script type="module" src="js/animations.js"></script>
+    <script type="module" src="js/button.js"></script>
 
     <script type="module">
         import { gsap } from "gsap/dist/gsap";
-        import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
+        // import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
         import { TextPlugin } from "gsap/TextPlugin";
 
-        gsap.registerPlugin(ScrollTrigger, TextPlugin);
-
-        // Pin theme button
-        gsap.to('.toggle-btn', {
-            scrollTrigger: {
-                trigger: '.toggle-btn',
-                endTrigger: 'footer',
-                start: 'center 90%',
-                pin: true,
-                scrub: true
-            }
-        })
+        gsap.registerPlugin(TextPlugin);
 
         gsap.to('.header-text', {
             text: 'JUMIAR : An AR Experience in Mobile Commerce.',
