--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GTBank</title>
+    <meta name="description"
+        content="A product designer and a design enthusiast. loves creating seamless user experiences and digital user interfaces.">
+    <meta name="keywords"
+        content="Product, Design, Product Designer, UI, UX, UIUX, UI/UX, Tobi, Oluwatobi, Ozenua, Perfectionist, User, User experience, User interface">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
     <link rel="stylesheet" href="public/styles/style.css" />
     <link rel="stylesheet" href="sass/texts.scss">
     <link rel="stylesheet" href="sass/cursor.scss">
@@ -19,10 +27,12 @@
         @import url('https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
     <script type="module">
-        import $ from "jquery";
-        window.addEventListener('load', () => {
-            $('html, body').animate({ scrollTop: 0 }, 'fast')
-        });
+            import $ from "jquery";
+                window.addEventListener('load', scrollToTop());
+
+                function scrollToTop() {
+                    $('html, body').animate({ scrollTop: 0 }, 'fast')
+                }
     </script>
 </head>
 
@@ -217,8 +227,8 @@
 
         <section class="gtworld opacity-0 mt-10 overflow-hidden">
             <div class="about-gtbank space-y-5 sm:space-y-6 2xl:space-y-7">
-                <a href="../assets/images/Gt Welcome.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                        src="../assets/images/Gt Welcome.png" alt=""></a>
+                <img class="rounded-2xl lg:rounded-3xl w-full"
+                        src="../assets/images/Gt Welcome.png" alt="">
 
                 <h3
                     class="about-gtworld-header-text inv font-caudex text-black dark:text-white text-xl lg:text-2xl xl:text-3xl">
@@ -291,8 +301,8 @@
                     process</h3>
 
                 <div class="design-process-image">
-                    <a href="../assets/images/Gt Design Process.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Design Process.png" alt="" class="lg:mt-8"></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Design Process.png" alt="" class="lg:mt-8">
                 </div>
             </div>
 
@@ -339,8 +349,8 @@
                 </h4>
 
                 <div class="customer-reviews-image">
-                    <a href="../assets/images/Gt Customer Review.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            class="lg:my-7" src="../assets/images/Gt Customer Review.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            class="lg:my-7" src="../assets/images/Gt Customer Review.png" alt="">
                 </div>
 
                 <p
@@ -394,10 +404,10 @@
                 </p>
 
                 <div class="users grid gap-y-3 lg:gap-y-4">
-                    <a href="../assets/images/customer alex.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/customer alex.png" alt=""></a>
-                    <a href="../assets/images/customer jane.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/customer jane.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/customer alex.png" alt="">
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/customer jane.png" alt="">
                 </div>
 
                 <ol
@@ -455,8 +465,8 @@
                 </p>
 
                 <div class="userflow-images">
-                    <a href="../assets/images/Gt Userflow 1.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Userflow 1.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Userflow 1.png" alt="">
                 </div>
 
                 <p
@@ -468,8 +478,8 @@
                 </p>
 
                 <div class="userflow-images">
-                    <a href="../assets/images/Gt Userflow 2.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Userflow 2.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Userflow 2.png" alt="">
                 </div>
             </div>
 
@@ -488,8 +498,8 @@
                 </p>
 
                 <div class="sketches-image">
-                    <a href="../assets/images/Gt sketch.jpg"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt sketch.jpg" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt sketch.jpg" alt="">
                 </div>
             </div>
 
@@ -508,8 +518,8 @@
                 </p>
 
                 <div class="wireframes-image">
-                    <a href="../assets/images/Gt Wireframe.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Wireframe.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Wireframe.png" alt="">
                 </div>
             </div>
 
@@ -528,8 +538,8 @@
                 </p>
 
                 <div class="visual-design-image">
-                    <a href="../assets/images/Gt Visual Design.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Visual Design.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Visual Design.png" alt="">
                 </div>
             </div>
 
@@ -547,8 +557,8 @@
                 </p>
 
                 <div class="splash-screen-image">
-                    <a href="../assets/images/Gt Splash Screen.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Splash Screen.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Splash Screen.png" alt="">
                 </div>
             </div>
 
@@ -569,8 +579,8 @@
                 </p>
 
                 <div class="onboarding-image">
-                    <a href="../assets/images/Gt Onboarding.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Onboarding.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Onboarding.png" alt="">
                 </div>
             </div>
 
@@ -597,9 +607,7 @@
                 </div>
 
                 <div class="image grid place-items-start">
-                    <a class="lg:-mt-4" href="../assets/images/Gt Navigation-Home.png"><img
-                            class="rounded-2xl lg:rounded-3xl w-full" src="../assets/images/Gt Navigation-Home.png"
-                            alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full lg:-mt-4" src="../assets/images/Gt Navigation-Home.png" alt="">
                 </div>
             </div>
 
@@ -621,8 +629,8 @@
                 </p>
 
                 <div class="error-handling-image">
-                    <a href="../assets/images/Gt Error Handling.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Error Handling.png" alt=""></a>
+                   <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Error Handling.png" alt="">
                 </div>
             </div>
 
@@ -638,8 +646,8 @@
                 </p>
 
                 <div class="better-visual-image">
-                    <a href="../assets/images/Gt Better Visual.png"><img class="rounded-2xl lg:rounded-3xl w-full"
-                            src="../assets/images/Gt Better Visual.png" alt=""></a>
+                    <img class="rounded-2xl lg:rounded-3xl w-full"
+                            src="../assets/images/Gt Better Visual.png" alt=""> 
                 </div>
             </div>
 
@@ -713,7 +721,7 @@
     <footer class="bg-black opacity-0 lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
         <div class="container mx-auto px-4 sm:px-8">
             <div
-                class="first-container before:bg-black after:bg-black  dark:before:bg-white dark:after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
+                class="first-container before:bg-white after:bg-white md:flex justify-between items-end space-y-10 lg:space-y-0 xl:space-x-10 py-8 xl:py-14">
                 <div
                     class="texts-container flex md:block items-baseline space-x-2 sm:space-x-7 md:space-x-0 md:space-y-5 xl:space-y-10">
                     <h1
@@ -748,12 +756,12 @@
                 </div>
             </div>
 
-                <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
-                    <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
-                        Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
-                                target="blank">ganiyu idris</a></span>
-                    </p>
-                </div>
+            <div class="credits text-center mt-14 lg:mt-20 2xl:mt-24">
+                <p class="developer font-sf text-primary text-tiny lg:text-xs xl:text-sm 2xl:text-base">
+                    Developed by <span><a class="text-white uppercase" href="https://www.linkedin.com/in/ganiyu-idris/"
+                            target="blank">ganiyu idris</a></span>
+                </p>
+            </div>
         </div>
     </footer>
 
@@ -765,25 +773,15 @@
         <script type="module" src="js/index.js"></script>
         <script type="module" src="js/opacity.js"></script>
         <script type="module" src="js/nav.js"></script>
-        <script type="module" src="js/animations.js"></script>
+        <script type="module" src="js/button.js"></script>
 
         <script type="module">
             import { gsap } from "gsap/dist/gsap";
-            import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
+            // import { ScrollTrigger } from "gsap/dist/ScrollTrigger";
             import { TextPlugin } from "gsap/TextPlugin";
 
 
-            gsap.registerPlugin(ScrollTrigger, TextPlugin);
-            // Pin button
-            gsap.to('.toggle-btn', {
-                scrollTrigger: {
-                    trigger: '.toggle-btn',
-                    endTrigger: 'footer',
-                    start: 'center 90%',
-                    pin: true,
-                    scrub: true
-                }
-            })
+            gsap.registerPlugin(TextPlugin);
 
             gsap.to('.header-text', {
                 text: 'GTBank : A new way to bank.',
