--- a/src/cryptly.html
+++ b/src/cryptly.html
@@ -298,14 +298,10 @@
 
                 <ol
                     class="list-decimal ml-4 font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:mt-10 lg:ml-5">
-                    <li>Non-educational onboarding process.</li>
-                    <li>Difficulty in account
-                        recovery.</li>
-                    <li>Difficulty in tracking portfolio.</li>
-                    <li>Error handling and feedbacks.
-                    </li>
-                    <li>Too many complex features.
-                    </li>
+                    <li>Create an entirely seamless experience with Crypto applications.</li>
+                    <li>2. Create and validate design Assuptions</li>
+                    <li>3. Make crypto applications more accessible to new people</li>
+                    <li>4. Transact cryptocurrency with little or no prior knowledge</li>
                 </ol>
             </div>
 
