--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -387,8 +387,7 @@
 
                 <p
                     class="design-style-guide-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
-                    After creating the User flow, I began creating wireframes to validate the flow and test out
-                    possible visual elements that will be used in the design.
+                    For this project, I prepared a simple design style guide for colors and typography.
                 </p>
 
                 <div class="design-style-guide-image w-full lg:mt-10 lg:mb-32">
@@ -462,7 +461,6 @@
 
                 <p
                     class="the-screen-search-details-text font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9">
-                    The search screen: A new way to search
                     This is one side of the solution, one we believe will make shopping a more exciting one. With
                     the
                     scan to search
